finish atom files

--- a/data_process/osmnx_pipeline/fmm2atom.ipynb
+++ b/data_process/osmnx_pipeline/fmm2atom.ipynb
@@ -34,6 +34,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DATA_PATH = \"../../data/\"\n",
+    "TAXI_DATA_PATH = \"../../data/taxi_after_proc/clean202006\"\n",
+    "DATASET = \"sz_taxi_202006\"\n",
+    "\n",
+    "MIN_LAT = 22.5311\n",
+    "MAX_LAT = 22.5517\n",
+    "MIN_LNG = 114.0439\n",
+    "MAX_LNG = 114.0633\n",
+    "\n",
+    "DATE_PREFIX = \"2020-06-\"\n",
+    "START_DAY = 1\n",
+    "END_DAY = 30\n",
+    "\n",
+    "DOWNSAMPLING_INTERVAL = 30\n",
+    "TRAJ_SPLIT_INTERVAL = 600\n",
+    "FLOW_AGG_INTERVAL_MINUTE = 15"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -350,7 +374,7 @@
     }
    ],
    "source": [
-    "df_edges=gpd.GeoDataFrame.from_file(\"../data/fmm_data/edges.shp\")\n",
+    "df_edges = gpd.GeoDataFrame.from_file(os.path.join(DATA_PATH, DATASET, f\"fmm_{DATASET}\", \"edges.shp\"))\n",
     "\n",
     "df_edges"
    ]
@@ -496,7 +520,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_geo.to_csv(\"../data/libcity_atom/sz_taxi.geo\", index=False)"
+    "df_geo.to_csv(os.path.join(DATA_PATH, DATASET, f\"{DATASET}.geo\"), index=False)"
    ]
   },
   {
@@ -525,7 +549,7 @@
     }
    ],
    "source": [
-    "line_graph=nx.read_gpickle(\"../data/futian_line_graph_drive.pkl\")\n",
+    "line_graph=nx.read_gpickle(os.path.join(DATA_PATH, DATASET, \"line_graph_drive.pkl\"))\n",
     "\n",
     "len(line_graph.nodes)"
    ]
@@ -1148,7 +1172,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df_rel.to_csv(\"../data/libcity_atom/sz_taxi.rel\", index=False)"
+    "# df_rel.to_csv(os.path.join(DATA_PATH, DATASET, f\"{DATASET}.rel\"), index=False)"
    ]
   },
   {
@@ -1455,8 +1479,8 @@
     }
    ],
    "source": [
-    "df_fmm_res=pd.read_csv(\"../data/fmm_data/mr.txt\", sep=\";\")\n",
-    "df_fmm_data=pd.read_csv(\"../data/fmm_data/gps.csv\", sep=\";\", parse_dates=[\"time\"])\n",
+    "df_fmm_res=pd.read_csv(os.path.join(DATA_PATH, DATASET, f\"fmm_{DATASET}\", \"mr.txt\"), sep=\";\")\n",
+    "df_fmm_data=pd.read_csv(os.path.join(DATA_PATH, DATASET, f\"fmm_{DATASET}\", \"gps.csv\"), sep=\";\", parse_dates=[\"time\"])\n",
     "\n",
     "df_fmm_res\n",
     "df_fmm_data"
@@ -1634,15 +1658,13 @@
     }
    ],
    "source": [
-    "# Mon. to Fri. 12.02-12.06\n",
-    "# 15 min agg interval 24*60/15=96\n",
     "\n",
-    "N=408\n",
+    "N=len(line_graph.nodes)\n",
     "\n",
-    "dyna_file=open(\"../data/libcity_atom/sz_taxi.dyna\", \"w\")\n",
+    "dyna_file=open(os.path.join(DATA_PATH, DATASET, f\"{DATASET}.dyna\"), \"w\")\n",
     "write_length=dyna_file.write(\"dyna_id,type,time,entity_id,flow\\n\") # disable printing return value\n",
     "\n",
-    "flow_matrix=np.zeros((5, 96, N), dtype=np.int16)\n",
+    "flow_matrix=np.zeros((END_DAY - START_DAY + 1, 24 * 60 // FLOW_AGG_INTERVAL_MINUTE, N), dtype=np.int16)\n",
     "\n",
     "for traj_id in tqdm(df_fmm_res[\"id\"].values):\n",
     "    time_list=df_fmm_data.loc[df_fmm_data[\"id\"]==traj_id][\"time\"].values\n",
@@ -1655,13 +1677,17 @@
     "        day=time_i.day\n",
     "        mins=time_i.hour*60+time_i.minute\n",
     "        \n",
-    "        flow_matrix[day-2][mins//15][road_list[i]]+=1\n",
+    "        flow_matrix[day-START_DAY][mins//FLOW_AGG_INTERVAL_MINUTE][road_list[i]]+=1\n",
     "        \n",
     "dyna_id_counter=0   \n",
     "for day in range(flow_matrix.shape[0]):\n",
     "    for interval in range(flow_matrix.shape[1]):\n",
     "        for road in range(flow_matrix.shape[2]):\n",
-    "            write_length=dyna_file.write(f\"{dyna_id_counter},state,2019-12-0{day+2}T{str(interval*15//60).zfill(2)}:{str((interval%4)*15).zfill(2)}:00Z,{road},{flow_matrix[day][interval][road]}\\n\")\n",
+    "            write_length=dyna_file.write(f\"{dyna_id_counter},\"+\n",
+    "                    \"state,\"+\n",
+    "                    f\"{DATE_PREFIX}{str(day+START_DAY).zfill(2)}T{str(interval*FLOW_AGG_INTERVAL_MINUTE//60).zfill(2)}:{str((interval%(60//FLOW_AGG_INTERVAL_MINUTE))*FLOW_AGG_INTERVAL_MINUTE).zfill(2)}:00Z,\"+\n",
+    "                    f\"{road},\"+\n",
+    "                    f\"{flow_matrix[day][interval][road]}\\n\")\n",
     "            dyna_id_counter+=1\n",
     "            \n",
     "dyna_file.close()"
@@ -1817,7 +1843,7 @@
     }
    ],
    "source": [
-    "df_dyna=pd.read_csv(\"../data/libcity_atom/sz_taxi.dyna\")\n",
+    "df_dyna=pd.read_csv(os.path.join(DATA_PATH, DATASET, f\"{DATASET}.dyna\"))\n",
     "\n",
     "df_dyna"
    ]
@@ -1877,41 +1903,20 @@
     "config[\"dyna\"][\"state\"]={\"entity_id\": \"geo_id\", \"flow\": \"num\"}\n",
     "\n",
     "config[\"info\"]={}\n",
-    "config[\"info\"][\"data_files\"]=\"sz_taxi\"\n",
-    "config[\"info\"][\"geo_file\"]=\"sz_taxi\"\n",
-    "config[\"info\"][\"rel_file\"]=\"sz_taxi\"\n",
+    "config[\"info\"][\"data_files\"]=DATASET\n",
+    "config[\"info\"][\"geo_file\"]=DATASET\n",
+    "config[\"info\"][\"rel_file\"]=DATASET\n",
     "config[\"info\"][\"data_col\"]=[\"flow\"]\n",
     "config[\"info\"][\"output_dim\"]=1\n",
     "# config[\"info\"][\"weight_col\"]=\"link_weight\"\n",
-    "config[\"info\"][\"time_intervals\"]=60*15\n",
+    "config[\"info\"][\"time_intervals\"]=60*FLOW_AGG_INTERVAL_MINUTE\n",
     "config[\"info\"][\"init_weight_inf_or_zero\"]=\"zero\" # adj matrix not connected: 0 (inf: infinity)\n",
     "config[\"info\"][\"set_weight_link_or_dist\"]=\"link\" # adj matrix 01 (dist: use weight)\n",
     "config[\"info\"][\"calculate_weight_adj\"]=False\n",
     "# config[\"info\"][\"weight_adj_epsilon\"]=0.1 # disabled when the above is false\n",
     "\n",
-    "json.dump(config, open(\"../data/libcity_atom/config.json\", \"w\", encoding=\"utf-8\"), ensure_ascii=False)\n",
+    "json.dump(config, open(os.path.join(DATA_PATH, DATASET, \"config.json\"), \"w\", encoding=\"utf-8\"), ensure_ascii=False)\n",
     "config"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "baseline\n",
-    "\n",
-    "---"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "cd ~/Bigscity-LibCity\n",
-    "\n",
-    "nohup python run_model.py --task traffic_state_pred --model GRU --dataset sz_taxi --gpu_id 5 > ./log/flow_GRU.log 2>&1 &"
    ]
   }
  ],
