--- a/model/baseline_eval.ipynb
+++ b/model/baseline_eval.ipynb
@@ -2,16 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/home/cseadmin/data/cys/TrafficFlowModel/model'"
+       "['80542',\n",
+       " '99366',\n",
+       " '33708',\n",
+       " '11806',\n",
+       " '53290',\n",
+       " '30710',\n",
+       " '97585',\n",
+       " '83276',\n",
+       " '96924',\n",
+       " '42155',\n",
+       " '63027',\n",
+       " '9037',\n",
+       " '50277',\n",
+       " '82978',\n",
+       " '29052']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -22,9 +36,10 @@
     "\n",
     "CACHE_PATH=\"../../Bigscity-LibCity/libcity/cache/\"\n",
     "\n",
-    "run_id_list=[79491, 44143, 63935, 12831, 41845, 72849, 23406, 9906, 17045, 91041, 12570, 29338, 13447]\n",
+    "run_id_list=os.listdir(CACHE_PATH)[1:]\n",
     "\n",
-    "%pwd"
+    "%pwd\n",
+    "run_id_list"
    ]
   },
   {
@@ -262,6 +277,8 @@
     }
    ],
    "source": [
+    "# sz_taxi_5day\n",
+    "\n",
     "df_eval=pd.DataFrame(columns=[\"MAE\", \"MAPE\", \"MSE\", \"RMSE\", \"Masked MAE\", \"Masked MAPE\", \"Masked MSE\", \"Masked RMSE\", \"R2\", \"EVAR\"])\n",
     "\n",
     "for run_id in run_id_list:\n",
@@ -270,6 +287,287 @@
     "            csv_res=file\n",
     "    model_name=csv_res.split(\"_\")[-3]\n",
     "    df_eval_res=pd.read_csv(os.path.join(CACHE_PATH, str(run_id), \"evaluate_cache\", csv_res))\n",
+    "    \n",
+    "    df_eval.loc[model_name]=df_eval_res.mean().values\n",
+    "\n",
+    "df_eval"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>MAE</th>\n",
+       "      <th>MAPE</th>\n",
+       "      <th>MSE</th>\n",
+       "      <th>RMSE</th>\n",
+       "      <th>Masked MAE</th>\n",
+       "      <th>Masked MAPE</th>\n",
+       "      <th>Masked MSE</th>\n",
+       "      <th>Masked RMSE</th>\n",
+       "      <th>R2</th>\n",
+       "      <th>EVAR</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>STGCN</th>\n",
+       "      <td>5.158203</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>95.891096</td>\n",
+       "      <td>9.717272</td>\n",
+       "      <td>5.810949</td>\n",
+       "      <td>0.884704</td>\n",
+       "      <td>114.276691</td>\n",
+       "      <td>10.619320</td>\n",
+       "      <td>0.755062</td>\n",
+       "      <td>0.755096</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ToGCN</th>\n",
+       "      <td>9.688037</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>188.814398</td>\n",
+       "      <td>13.740707</td>\n",
+       "      <td>9.031057</td>\n",
+       "      <td>2.586184</td>\n",
+       "      <td>195.530885</td>\n",
+       "      <td>13.982829</td>\n",
+       "      <td>0.518013</td>\n",
+       "      <td>0.570458</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Seq2Seq</th>\n",
+       "      <td>9.275260</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>305.144669</td>\n",
+       "      <td>17.465466</td>\n",
+       "      <td>10.271731</td>\n",
+       "      <td>1.570615</td>\n",
+       "      <td>372.347895</td>\n",
+       "      <td>19.293440</td>\n",
+       "      <td>0.221175</td>\n",
+       "      <td>0.233385</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>RNN</th>\n",
+       "      <td>9.118608</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>303.928307</td>\n",
+       "      <td>17.433128</td>\n",
+       "      <td>10.138094</td>\n",
+       "      <td>1.499051</td>\n",
+       "      <td>372.180336</td>\n",
+       "      <td>19.291607</td>\n",
+       "      <td>0.224181</td>\n",
+       "      <td>0.239886</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AutoEncoder</th>\n",
+       "      <td>10.339843</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>388.007884</td>\n",
+       "      <td>19.697663</td>\n",
+       "      <td>11.519646</td>\n",
+       "      <td>1.542397</td>\n",
+       "      <td>480.549205</td>\n",
+       "      <td>21.921151</td>\n",
+       "      <td>0.009533</td>\n",
+       "      <td>0.053323</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MTGNN</th>\n",
+       "      <td>4.005621</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>62.905317</td>\n",
+       "      <td>7.927934</td>\n",
+       "      <td>4.608485</td>\n",
+       "      <td>0.548165</td>\n",
+       "      <td>78.605223</td>\n",
+       "      <td>8.862256</td>\n",
+       "      <td>0.839397</td>\n",
+       "      <td>0.839470</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>FNN</th>\n",
+       "      <td>9.076950</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>358.464480</td>\n",
+       "      <td>18.929037</td>\n",
+       "      <td>10.675523</td>\n",
+       "      <td>1.074904</td>\n",
+       "      <td>449.651334</td>\n",
+       "      <td>21.200282</td>\n",
+       "      <td>0.084777</td>\n",
+       "      <td>0.160301</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AGCRN</th>\n",
+       "      <td>4.080020</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>61.057433</td>\n",
+       "      <td>7.813271</td>\n",
+       "      <td>4.566071</td>\n",
+       "      <td>0.634664</td>\n",
+       "      <td>74.730852</td>\n",
+       "      <td>8.644014</td>\n",
+       "      <td>0.844144</td>\n",
+       "      <td>0.844216</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DCRNN</th>\n",
+       "      <td>4.420935</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>78.294429</td>\n",
+       "      <td>8.846667</td>\n",
+       "      <td>4.967698</td>\n",
+       "      <td>0.651729</td>\n",
+       "      <td>95.960265</td>\n",
+       "      <td>9.794033</td>\n",
+       "      <td>0.800137</td>\n",
+       "      <td>0.800425</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ASTGCN</th>\n",
+       "      <td>3.281325</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>66.315501</td>\n",
+       "      <td>5.756425</td>\n",
+       "      <td>3.597857</td>\n",
+       "      <td>0.656640</td>\n",
+       "      <td>77.977332</td>\n",
+       "      <td>6.255243</td>\n",
+       "      <td>0.828059</td>\n",
+       "      <td>0.828147</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MSTGCN</th>\n",
+       "      <td>2.349216</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>34.900022</td>\n",
+       "      <td>3.746542</td>\n",
+       "      <td>2.556219</td>\n",
+       "      <td>0.505745</td>\n",
+       "      <td>41.269448</td>\n",
+       "      <td>4.068413</td>\n",
+       "      <td>0.909463</td>\n",
+       "      <td>0.909491</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GWNET</th>\n",
+       "      <td>3.748246</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>59.090234</td>\n",
+       "      <td>7.684821</td>\n",
+       "      <td>4.324531</td>\n",
+       "      <td>0.498856</td>\n",
+       "      <td>73.759181</td>\n",
+       "      <td>8.585810</td>\n",
+       "      <td>0.849129</td>\n",
+       "      <td>0.849556</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>STSGCN</th>\n",
+       "      <td>10.584228</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>445.971474</td>\n",
+       "      <td>21.117800</td>\n",
+       "      <td>12.251219</td>\n",
+       "      <td>1.017484</td>\n",
+       "      <td>561.113271</td>\n",
+       "      <td>23.687564</td>\n",
+       "      <td>-0.138446</td>\n",
+       "      <td>0.001040</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CONVGCN</th>\n",
+       "      <td>128.308472</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>57525.562500</td>\n",
+       "      <td>239.844879</td>\n",
+       "      <td>127.073647</td>\n",
+       "      <td>35.363300</td>\n",
+       "      <td>55578.058594</td>\n",
+       "      <td>235.749985</td>\n",
+       "      <td>-145.137842</td>\n",
+       "      <td>-132.848587</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    MAE  MAPE           MSE        RMSE  Masked MAE  \\\n",
+       "STGCN          5.158203   inf     95.891096    9.717272    5.810949   \n",
+       "ToGCN          9.688037   inf    188.814398   13.740707    9.031057   \n",
+       "Seq2Seq        9.275260   inf    305.144669   17.465466   10.271731   \n",
+       "RNN            9.118608   inf    303.928307   17.433128   10.138094   \n",
+       "AutoEncoder   10.339843   inf    388.007884   19.697663   11.519646   \n",
+       "MTGNN          4.005621   inf     62.905317    7.927934    4.608485   \n",
+       "FNN            9.076950   inf    358.464480   18.929037   10.675523   \n",
+       "AGCRN          4.080020   inf     61.057433    7.813271    4.566071   \n",
+       "DCRNN          4.420935   inf     78.294429    8.846667    4.967698   \n",
+       "ASTGCN         3.281325   inf     66.315501    5.756425    3.597857   \n",
+       "MSTGCN         2.349216   inf     34.900022    3.746542    2.556219   \n",
+       "GWNET          3.748246   inf     59.090234    7.684821    4.324531   \n",
+       "STSGCN        10.584228   inf    445.971474   21.117800   12.251219   \n",
+       "CONVGCN      128.308472   inf  57525.562500  239.844879  127.073647   \n",
+       "\n",
+       "             Masked MAPE    Masked MSE  Masked RMSE          R2        EVAR  \n",
+       "STGCN           0.884704    114.276691    10.619320    0.755062    0.755096  \n",
+       "ToGCN           2.586184    195.530885    13.982829    0.518013    0.570458  \n",
+       "Seq2Seq         1.570615    372.347895    19.293440    0.221175    0.233385  \n",
+       "RNN             1.499051    372.180336    19.291607    0.224181    0.239886  \n",
+       "AutoEncoder     1.542397    480.549205    21.921151    0.009533    0.053323  \n",
+       "MTGNN           0.548165     78.605223     8.862256    0.839397    0.839470  \n",
+       "FNN             1.074904    449.651334    21.200282    0.084777    0.160301  \n",
+       "AGCRN           0.634664     74.730852     8.644014    0.844144    0.844216  \n",
+       "DCRNN           0.651729     95.960265     9.794033    0.800137    0.800425  \n",
+       "ASTGCN          0.656640     77.977332     6.255243    0.828059    0.828147  \n",
+       "MSTGCN          0.505745     41.269448     4.068413    0.909463    0.909491  \n",
+       "GWNET           0.498856     73.759181     8.585810    0.849129    0.849556  \n",
+       "STSGCN          1.017484    561.113271    23.687564   -0.138446    0.001040  \n",
+       "CONVGCN        35.363300  55578.058594   235.749985 -145.137842 -132.848587  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# sz_taxi_202006\n",
+    "\n",
+    "df_eval=pd.DataFrame(columns=[\"MAE\", \"MAPE\", \"MSE\", \"RMSE\", \"Masked MAE\", \"Masked MAPE\", \"Masked MSE\", \"Masked RMSE\", \"R2\", \"EVAR\"])\n",
+    "\n",
+    "for run_id in run_id_list:\n",
+    "    for file in os.listdir(os.path.join(CACHE_PATH, run_id, \"evaluate_cache\")):\n",
+    "        if file.endswith(\".csv\"):\n",
+    "            csv_res=file\n",
+    "    model_name=csv_res.split(\"_\")[-4]\n",
+    "    df_eval_res=pd.read_csv(os.path.join(CACHE_PATH, run_id, \"evaluate_cache\", csv_res))\n",
     "    \n",
     "    df_eval.loc[model_name]=df_eval_res.mean().values\n",
     "\n",
