traj recovery; 5min interval

--- a/model/baseline_eval.ipynb
+++ b/model/baseline_eval.ipynb
@@ -2,30 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['80542',\n",
-       " '99366',\n",
-       " '33708',\n",
-       " '11806',\n",
-       " '53290',\n",
-       " '30710',\n",
-       " '97585',\n",
-       " '83276',\n",
-       " '96924',\n",
-       " '42155',\n",
-       " '63027',\n",
-       " '9037',\n",
-       " '50277',\n",
-       " '82978',\n",
-       " '29052']"
+       "['2430',\n",
+       " '5209',\n",
+       " '97537',\n",
+       " '35379',\n",
+       " '73830',\n",
+       " '88217',\n",
+       " '51654',\n",
+       " '9265',\n",
+       " '86187',\n",
+       " '191',\n",
+       " '47102',\n",
+       " '2701',\n",
+       " '41180',\n",
+       " '78803',\n",
+       " '87339',\n",
+       " '71142']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,6 +564,259 @@
     "df_eval=pd.DataFrame(columns=[\"MAE\", \"MAPE\", \"MSE\", \"RMSE\", \"Masked MAE\", \"Masked MAPE\", \"Masked MSE\", \"Masked RMSE\", \"R2\", \"EVAR\"])\n",
     "\n",
     "for run_id in run_id_list:\n",
+    "    for file in os.listdir(os.path.join(CACHE_PATH, run_id, \"evaluate_cache\")):\n",
+    "        if file.endswith(\".csv\"):\n",
+    "            csv_res=file\n",
+    "    model_name=csv_res.split(\"_\")[-4]\n",
+    "    df_eval_res=pd.read_csv(os.path.join(CACHE_PATH, run_id, \"evaluate_cache\", csv_res))\n",
+    "    \n",
+    "    df_eval.loc[model_name]=df_eval_res.mean().values\n",
+    "\n",
+    "df_eval"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>MAE</th>\n",
+       "      <th>MAPE</th>\n",
+       "      <th>MSE</th>\n",
+       "      <th>RMSE</th>\n",
+       "      <th>Masked MAE</th>\n",
+       "      <th>Masked MAPE</th>\n",
+       "      <th>Masked MSE</th>\n",
+       "      <th>Masked RMSE</th>\n",
+       "      <th>R2</th>\n",
+       "      <th>EVAR</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Seq2Seq</th>\n",
+       "      <td>9.039898</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>289.190948</td>\n",
+       "      <td>17.003249</td>\n",
+       "      <td>9.965468</td>\n",
+       "      <td>1.564343</td>\n",
+       "      <td>351.744324</td>\n",
+       "      <td>18.752507</td>\n",
+       "      <td>0.259920</td>\n",
+       "      <td>0.269588</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CONVGCN</th>\n",
+       "      <td>57.448203</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>11268.911377</td>\n",
+       "      <td>106.148260</td>\n",
+       "      <td>57.390455</td>\n",
+       "      <td>15.819576</td>\n",
+       "      <td>11145.585449</td>\n",
+       "      <td>105.562632</td>\n",
+       "      <td>-27.642210</td>\n",
+       "      <td>-24.842783</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>RNN</th>\n",
+       "      <td>9.107327</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>270.698135</td>\n",
+       "      <td>16.452799</td>\n",
+       "      <td>9.874097</td>\n",
+       "      <td>1.696125</td>\n",
+       "      <td>322.471207</td>\n",
+       "      <td>17.957329</td>\n",
+       "      <td>0.307388</td>\n",
+       "      <td>0.312827</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ASTGCN</th>\n",
+       "      <td>8.367975</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>195.558754</td>\n",
+       "      <td>13.971000</td>\n",
+       "      <td>9.312792</td>\n",
+       "      <td>1.628875</td>\n",
+       "      <td>233.626152</td>\n",
+       "      <td>15.270473</td>\n",
+       "      <td>0.492812</td>\n",
+       "      <td>0.493053</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ToGCN</th>\n",
+       "      <td>9.818080</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>213.795460</td>\n",
+       "      <td>14.621634</td>\n",
+       "      <td>9.090293</td>\n",
+       "      <td>2.627694</td>\n",
+       "      <td>202.050900</td>\n",
+       "      <td>14.214267</td>\n",
+       "      <td>0.452987</td>\n",
+       "      <td>0.507863</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MSTGCN</th>\n",
+       "      <td>7.002821</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>121.952013</td>\n",
+       "      <td>11.040104</td>\n",
+       "      <td>7.619031</td>\n",
+       "      <td>1.484835</td>\n",
+       "      <td>143.588173</td>\n",
+       "      <td>11.979763</td>\n",
+       "      <td>0.683529</td>\n",
+       "      <td>0.683705</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>FNN</th>\n",
+       "      <td>9.766923</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>396.210556</td>\n",
+       "      <td>19.899239</td>\n",
+       "      <td>11.494213</td>\n",
+       "      <td>1.085531</td>\n",
+       "      <td>497.867691</td>\n",
+       "      <td>22.306232</td>\n",
+       "      <td>-0.013437</td>\n",
+       "      <td>0.087468</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GWNET</th>\n",
+       "      <td>3.848504</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>59.726578</td>\n",
+       "      <td>7.725074</td>\n",
+       "      <td>4.409513</td>\n",
+       "      <td>0.531451</td>\n",
+       "      <td>74.407488</td>\n",
+       "      <td>8.622424</td>\n",
+       "      <td>0.847236</td>\n",
+       "      <td>0.847273</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AGCRN</th>\n",
+       "      <td>5.372940</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>98.803316</td>\n",
+       "      <td>9.937461</td>\n",
+       "      <td>5.825678</td>\n",
+       "      <td>0.942671</td>\n",
+       "      <td>116.046106</td>\n",
+       "      <td>10.770933</td>\n",
+       "      <td>0.747264</td>\n",
+       "      <td>0.747281</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MTGNN</th>\n",
+       "      <td>3.840988</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>57.180310</td>\n",
+       "      <td>7.559726</td>\n",
+       "      <td>4.404340</td>\n",
+       "      <td>0.535907</td>\n",
+       "      <td>71.222061</td>\n",
+       "      <td>8.437071</td>\n",
+       "      <td>0.853734</td>\n",
+       "      <td>0.853761</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AutoEncoder</th>\n",
+       "      <td>10.059541</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>369.365585</td>\n",
+       "      <td>19.218768</td>\n",
+       "      <td>11.230853</td>\n",
+       "      <td>1.547335</td>\n",
+       "      <td>456.375877</td>\n",
+       "      <td>21.362816</td>\n",
+       "      <td>0.054953</td>\n",
+       "      <td>0.088959</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DCRNN</th>\n",
+       "      <td>6.947852</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>181.619431</td>\n",
+       "      <td>13.473693</td>\n",
+       "      <td>7.517072</td>\n",
+       "      <td>1.141323</td>\n",
+       "      <td>216.097736</td>\n",
+       "      <td>14.697206</td>\n",
+       "      <td>0.535410</td>\n",
+       "      <td>0.537731</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   MAE  MAPE           MSE        RMSE  Masked MAE  \\\n",
+       "Seq2Seq       9.039898   inf    289.190948   17.003249    9.965468   \n",
+       "CONVGCN      57.448203   inf  11268.911377  106.148260   57.390455   \n",
+       "RNN           9.107327   inf    270.698135   16.452799    9.874097   \n",
+       "ASTGCN        8.367975   inf    195.558754   13.971000    9.312792   \n",
+       "ToGCN         9.818080   inf    213.795460   14.621634    9.090293   \n",
+       "MSTGCN        7.002821   inf    121.952013   11.040104    7.619031   \n",
+       "FNN           9.766923   inf    396.210556   19.899239   11.494213   \n",
+       "GWNET         3.848504   inf     59.726578    7.725074    4.409513   \n",
+       "AGCRN         5.372940   inf     98.803316    9.937461    5.825678   \n",
+       "MTGNN         3.840988   inf     57.180310    7.559726    4.404340   \n",
+       "AutoEncoder  10.059541   inf    369.365585   19.218768   11.230853   \n",
+       "DCRNN         6.947852   inf    181.619431   13.473693    7.517072   \n",
+       "\n",
+       "             Masked MAPE    Masked MSE  Masked RMSE         R2       EVAR  \n",
+       "Seq2Seq         1.564343    351.744324    18.752507   0.259920   0.269588  \n",
+       "CONVGCN        15.819576  11145.585449   105.562632 -27.642210 -24.842783  \n",
+       "RNN             1.696125    322.471207    17.957329   0.307388   0.312827  \n",
+       "ASTGCN          1.628875    233.626152    15.270473   0.492812   0.493053  \n",
+       "ToGCN           2.627694    202.050900    14.214267   0.452987   0.507863  \n",
+       "MSTGCN          1.484835    143.588173    11.979763   0.683529   0.683705  \n",
+       "FNN             1.085531    497.867691    22.306232  -0.013437   0.087468  \n",
+       "GWNET           0.531451     74.407488     8.622424   0.847236   0.847273  \n",
+       "AGCRN           0.942671    116.046106    10.770933   0.747264   0.747281  \n",
+       "MTGNN           0.535907     71.222061     8.437071   0.853734   0.853761  \n",
+       "AutoEncoder     1.547335    456.375877    21.362816   0.054953   0.088959  \n",
+       "DCRNN           1.141323    216.097736    14.697206   0.535410   0.537731  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# sz_taxi_202006 4 4\n",
+    "\n",
+    "df_eval=pd.DataFrame(columns=[\"MAE\", \"MAPE\", \"MSE\", \"RMSE\", \"Masked MAE\", \"Masked MAPE\", \"Masked MSE\", \"Masked RMSE\", \"R2\", \"EVAR\"])\n",
+    "\n",
+    "for run_id in run_id_list:\n",
+    "    if not os.listdir(os.path.join(CACHE_PATH, run_id, \"evaluate_cache\")):\n",
+    "        continue\n",
     "    for file in os.listdir(os.path.join(CACHE_PATH, run_id, \"evaluate_cache\")):\n",
     "        if file.endswith(\".csv\"):\n",
     "            csv_res=file\n",
